# risk-assessment

./: .editorconfig  .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  biome.json  components.json  cosmic-ray.toml  deployment.config.example.json  docker-bake.hcl  flake.nix  openapi-ts.config.ts  package.json  pyproject.toml  rebuild.sh  tsconfig.json  vite.config.ts
.claude/: mcp-strategy.md  settings.json
.claude/agents/: docs-vision.md  expert.md  prd.md  testing.md
.claude/commands/: explore.md  fix-issue.md  implement.md  prd.md  review.md  test.md
.claude/hooks/: block-dangerous-bash.sh  format-after-edit.sh
.github/workflows/: build.yml  ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  main.yml
docker/: .env.docker.example  Dockerfile  Dockerfile.distroless  docker-compose.yml
docker/initdb/: 00-require-ssl.sh  01-temporal.sql
docs/: README.md  architecture.md  deployment.md  development.md  operations.md  secrets-rotation.md  temporal-mtls-rotation.md  upgrade.md
infra/: .gitignore  app.py  aws_config.example  cdk.json  pyproject.toml
infra/cert_ra_infra/: config.py
infra/cert_ra_infra/constructs/app/: blue_green_deployment.py  litestar_service.py
infra/cert_ra_infra/constructs/app/_lambda_assets/after_allow_traffic/: handler.py
infra/cert_ra_infra/constructs/app/_lambda_assets/before_allow_traffic/: handler.py
infra/cert_ra_infra/constructs/data/: cmk.py  encrypted_bucket.py  postgres.py
infra/cert_ra_infra/constructs/dns/: hosted_zone.py
infra/cert_ra_infra/constructs/identity/: cfn_exec_boundary.py  ecr_repo.py  gha_oidc_role.py  signing.py
infra/cert_ra_infra/constructs/migrations/: migration_task.py
infra/cert_ra_infra/constructs/network/: public_alb.py  security_groups.py  vpc.py
infra/cert_ra_infra/constructs/observability/: cloud_trail.py  guard_duty.py
infra/cert_ra_infra/constructs/ops/: maintenance_container.py
infra/cert_ra_infra/constructs/ops/_docker/maint/: Dockerfile  temporal-wrapper.sh
infra/cert_ra_infra/constructs/secrets/: seeded_secret.py
infra/cert_ra_infra/constructs/temporal/: cert_issuance.py  cert_renewal.py  cluster.py  mtls_pki.py  root_ca_disable.py  schema_bootstrap.py
infra/cert_ra_infra/constructs/temporal/_docker/temporal_server/: Dockerfile  entrypoint.sh
infra/cert_ra_infra/constructs/temporal/_lambda_assets/initial_issuance/: handler.py
infra/cert_ra_infra/constructs/temporal/_lambda_assets/renewal_handler/: handler.py
infra/cert_ra_infra/constructs/temporal/_lambda_assets/root_ca_disable/: handler.py
infra/cert_ra_infra/constructs/workers/: worker_service.py
infra/cert_ra_infra/stacks/: __init__.py  _config.py  app.py  data.py  dns.py  identity.py  maintenance.py  migrations.py  network.py  observability.py  secrets.py  temporal.py  workers.py
infra/scripts/: _cleanup_common.sh  _common.sh  apply-pending-fixes.sh  cleanup-all-stacks.sh  cleanup-app-stack.sh  cleanup-data-stack.sh  cleanup-dns-stack.sh  cleanup-identity-stack.sh  cleanup-maintenance-stack.sh  cleanup-migrations-stack.sh  cleanup-network-stack.sh  cleanup-observability-stack.sh  cleanup-secrets-stack.sh  cleanup-temporal-stack.sh  cleanup-workers-stack.sh  diagnose-invitation-activation.sh  finalize-deploy.sh  find-false-pending-invitations.sh  finish-pending-fixes.sh  initial-setup.sh  rescue-stuck-rollback.sh  seed-secrets.py  upgrade.sh  verify-deploy.sh
infra/tests/: test_app_stack.py  test_app_synth.py  test_data_stack.py  test_dns_stack.py  test_identity_stack.py  test_maintenance_stack.py  test_migrations_stack.py  test_network_stack.py  test_observability_stack.py  test_secrets_stack.py  test_temporal_stack.py  test_workers_stack.py
infra/tests/constructs/: test_blue_green_deployment.py  test_cert_issuance.py  test_cert_renewal.py  test_cfn_exec_boundary.py  test_cloud_trail.py  test_cluster.py  test_cmk.py  test_ecr_repo.py  test_encrypted_bucket.py  test_gha_oidc_role.py  test_guard_duty.py  test_hosted_zone.py  test_litestar_service.py  test_maintenance_container.py  test_migration_task.py  test_mtls_pki.py  test_postgres.py  test_public_alb.py  test_root_ca_disable.py  test_schema_bootstrap.py  test_security_groups.py  test_seeded_secret.py  test_signing.py  test_vpc.py  test_worker_service.py
lending-markets-rating/: .env.example  README.md  eslint.config.js  package.json  tsconfig.json
lending-markets-rating/src/: index.ts
markets/: aave_usdc.json  compound_usdc.json  morpho_usdc_cbbtc.json  morpho_usdc_wsteth.json
resources/: index.html  main.css  main.tsx  vite-env.d.ts
resources/components/: app-sidebar.tsx  asset-logo.tsx  auth-hero-panel.tsx  container.tsx  dashboard-switcher.tsx  data-table.tsx  evidence-tree.tsx  favorite-button.tsx  favorites-provider.tsx  header-user-menu.tsx  header.tsx  icons.tsx  input-error.tsx  logo.tsx  market-metrics-panel.tsx  nav-main.tsx  protocol-metrics-panel.tsx  score-trend-chart.tsx  settings-sidebar.tsx  team-switcher.tsx  theme-provider.tsx  theme-toggle.tsx
resources/hooks/: use-flash-messages.ts  use-inertia-form.ts  use-mobile.ts
resources/layouts/: admin-layout.tsx  app-layout.tsx  guest-layout.tsx
resources/lib/: chain-labels.ts  format-evidence.ts  logos.ts  utils.ts
resources/pages/: about.tsx  dashboard.tsx  error.tsx  landing.tsx
scripts/: docs_to_pdf.py  fill_dummy_data.py  reset_password.py  seed_finality.py  seed_manual_metrics.csv  seed_manual_metrics.py  seed_manual_metrics_governance.py  seed_manual_metrics_market.py  seed_manual_metrics_protocol.py  seed_token_metrics.py  trigger_token_activity.py
src/cert_ra/: __init__.py  log.py  types.py  utils.py
tests/: conftest.py  data_fixtures.py  helpers.py
tests/integration/: conftest.py  test_access.py  test_account_role.py  test_accounts.py  test_admin.py  test_assurance_mapping.py  test_dashboards.py  test_email_verification.py  test_enforcement.py  test_manual_anchors.py  test_manual_metrics.py  test_manual_metrics_team_scoped.py  (+18 more)
(+541 files in other folders)
