[project]
name = "cert-ra-infra"
version = "0.1.0"
description = "Certora Blockchain Risk Assessment — AWS CDK infrastructure"
authors = [{ name = "Cloud Team", email = "cloudteam@certora.com" }]
requires-python = ">=3.12, <3.15"
dependencies = [
  "aws-cdk-lib>=2.180.0,<3.0.0",
  "constructs>=10.4.0,<11.0.0",
  "cdk-nag>=2.35.0",
  "boto3>=1.43.23",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "pytest-snapshot>=0.9.0",
  "pytest-xdist>=3.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pyright>=1.1.380",
  "boto3-stubs[essential,acm-pca,codedeploy,ecs,ecr,kms,rds,secretsmanager,ssm,iam]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cert_ra_infra"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",       # pycodestyle / pyflakes
  "I",                 # isort
  "UP",                # pyupgrade
  "B",                 # bugbear
  "SIM",               # simplify
  "RUF",               # ruff-specific
]
ignore = [
  "E501",              # line length handled by formatter
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
  "cdk\\.out/",
  "_lambda_assets/",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["cert_ra_infra", "app.py", "tests"]
exclude = [
  "cdk.out",
  "**/_lambda_assets",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config -n auto"
